assemblydir = $(libdir)/mono/tao

SUBDIRS = \
	Lesson01 \
	Lesson02 \
	Lesson03 \
	Lesson04 \
	Lesson05 \
	Lesson06 \
	Lesson07 \
	Lesson08 \
	Lesson09 \
	Lesson10 \
	Lesson11 \
	Lesson12 \
	Lesson13 \
	Lesson14 \
	Lesson15 \
	Lesson16 \
	Lesson17 \
	Lesson18 \
	Lesson19 \
	Lesson20 \
	Lesson21 \
	Lesson23 \
	Lesson25 \
	Lesson26 \
	Lesson34
