assemblydir = $(libdir)/mono/tao

SUBDIRS = \
	Aaindex \
	Aapoly \
	Aargb \
	Accanti \
	Accpersp \
	Alpha \
	Alpha3d \
	Anti \
	Bezcurve \
	Bezmesh \
	Bezsurf \
	Checker \
	CheckerOld \
	Clip \
	Colormat \
	Cube \
	DepthCue \
	Dof \
	Double \
	Drawf \
	Feedback \
	Fog \
	FogIndex \
	FogIndexOld \
	FogOld \
	Font \
	Hello \
	Image \
	Light \
	Lines \
	List \
	Material \
	Mipmap \
	Model \
	MoveLight \
	Nurbs \
	PickDepth \
	PickSquare \
	Plane \
	Planet \
	PolyOff \
	Polys \
	Quadric \
	Robot \
	Scene \
	SceneBlueAmbient \
	SceneColorLight \
	SceneFlat \
	Select \
	Smooth \
	Stencil \
	Stroke \
	Surface \
	SurfaceOld \
	TeaAmbient \
	Teapots \
	Tess \
	TessWind \
	TexBind \
	TexGen \
	TexProx \
	TexSub \
	TextureSurf \
	Torus \
	Trim \
	UnProject \
	Varray \
	Wrap
